Update WALA to latest version